--- a/iosOrAndroid.html
+++ b/iosOrAndroid.html
@@ -1,5 +1,7 @@
 <body>
-  <a href="https://play.google.com/store/apps/details?id=com.veldteck.enawra&hl=en_US&gl=US">android</a>
+  <a href="https://play.google.com/store/apps/details?id=com.veldteck.enawra&hl=en_US&gl=US">click here if you have android</a>
+  
+  <p>or</p>
   
   <a href="https://testflight.apple.com/join/mtuFXjTP">ios</a>
 </body
