--- a/iosOrAndroid.html
+++ b/iosOrAndroid.html
@@ -3,5 +3,5 @@
   
   <p>or</p>
   
-  <a href="https://testflight.apple.com/join/mtuFXjTP">ios</a>
+  <a href="https://testflight.apple.com/join/mtuFXjTP">if you have ios</a>
 </body
