--- a/iosOrAndroid.html
+++ b/iosOrAndroid.html
@@ -6,6 +6,6 @@
   <p>or</p>
   
   <h1>
-  <a href="https://testflight.apple.com/join/mtuFXjTP">if you have iPhone</a>
+  <a href="https://testflight.apple.com/join/mtuFXjTP">if you have iPhone Ezra</a>
   </h1>
 </body
