--- a/ia.html
+++ b/ia.html
@@ -1,17 +1,19 @@
 <body>
   <div>
   <div style="min-height:460px">
-  <h3>Android</h3><br>
-  <img src="https://user-images.githubusercontent.com/15698032/153604287-91633ac3-971a-418f-8075-26227a964b21.png">
-  <a href="https://play.google.com/store/apps/details?id=com.veldteck.enawra&hl=en_US&gl=US" style="font-size:120px">Android</a>
+    <h3><a href="https://play.google.com/store/apps/details?id=com.veldteck.enawra&hl=en_US&gl=US" style="font-size:120px">Android</a></h3><br>
+      <a href="https://play.google.com/store/apps/details?id=com.veldteck.enawra&hl=en_US&gl=US" style="font-size:120px">
+        <img src="https://user-images.githubusercontent.com/15698032/153604287-91633ac3-971a-418f-8075-26227a964b21.png">
+      </a>
   </div>
 </div>
 
 <div>
   <div style="min-height:460px">
-  <h3>iPhone</h3><br>
-  <img src="https://user-images.githubusercontent.com/15698032/153604303-d722f8ea-a888-4ec3-ac0d-ef5d8db76546.png">
-    <a href="https://testflight.apple.com/join/mtuFXjTP" style="font-size:120px">iPhone</a>
+  <h3><a href="https://testflight.apple.com/join/mtuFXjTP" style="font-size:120px">iPhone</a></h3><br>
+    <a href="https://testflight.apple.com/join/mtuFXjTP" style="font-size:120px">
+      <img src="https://user-images.githubusercontent.com/15698032/153604303-d722f8ea-a888-4ec3-ac0d-ef5d8db76546.png">
+    </a>
   </div>
 </div>
 </body
