--- a/ia.html
+++ b/ia.html
@@ -1,7 +1,7 @@
 <body>
   <div>
-  <div style="min-height:460px">
-    <h3><a href="https://play.google.com/store/apps/details?id=com.veldteck.enawra&hl=en_US&gl=US" style="font-size:120px">Android</a></h3><br>
+  <div style="min-height:260px">
+    <h3><a href="https://play.google.com/store/apps/details?id=com.veldteck.enawra&hl=en_US&gl=US" style="font-size:120px">ANDROID</a></h3><br>
     <a href="https://play.google.com/store/apps/details?id=com.veldteck.enawra&hl=en_US&gl=US" style="font-size:120px">
       <img src="https://user-images.githubusercontent.com/15698032/153604287-91633ac3-971a-418f-8075-26227a964b21.png">
     </a>
