--- a/ia.html
+++ b/ia.html
@@ -4,7 +4,7 @@
     <h3><a href="https://play.google.com/store/apps/details?id=com.veldteck.enawra&hl=en_US&gl=US" style="font-size:120px">Android</a>&nbsp;&nbsp;<a href="https://testflight.apple.com/join/mtuFXjTP" style="font-size:120px">iPhone</a></h3><br>
     <a href="https://play.google.com/store/apps/details?id=com.veldteck.enawra&hl=en_US&gl=US">
       <img src="https://user-images.githubusercontent.com/15698032/153604287-91633ac3-971a-418f-8075-26227a964b21.png">
-    </a>&nbsp;&nbsp;&nbsp;&nbsp;
+    </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <!--     <h3><a href="https://testflight.apple.com/join/mtuFXjTP" style="font-size:120px">iPhone</a></h3> -->
     <a href="https://testflight.apple.com/join/mtuFXjTP">
       <img src="https://user-images.githubusercontent.com/15698032/153604303-d722f8ea-a888-4ec3-ac0d-ef5d8db76546.png">
