--- a/iosOrAndroid.html
+++ b/iosOrAndroid.html
@@ -1,5 +1,6 @@
 <body>
   <div>
+    <h2>Download links</h2>
   <div style="min-height:260px">
     <h3><a href="https://play.google.com/store/apps/details?id=com.veldteck.enawra&hl=en_US&gl=US" style="font-size:120px">Android</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://testflight.apple.com/join/mtuFXjTP" style="font-size:120px">iPhone</a></h3><br>
     <a href="https://play.google.com/store/apps/details?id=com.veldteck.enawra&hl=en_US&gl=US">
