--- a/enawra.html
+++ b/enawra.html
@@ -2,7 +2,7 @@
   <div>
     <h2>Download links</h2>
   <div style="min-height:260px">
-    <h3><a href="https://play.google.com/store/apps/details?id=com.veldteck.enawra&hl=en_US&gl=US" style="font-size:120px">Android</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://testflight.apple.com/join/mtuFXjTP" style="font-size:120px">iPhone</a></h3><br>
+    <h3><a href="https://play.google.com/store/apps/details?id=com.veldteck.enawra&hl=en_US&gl=US" style="font-size:120px">Android</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="itms-appss://apps.apple.com/us/app/enawra/id1608956149" style="font-size:120px">iPhone</a></h3><br>
     <a href="https://play.google.com/store/apps/details?id=com.veldteck.enawra&hl=en_US&gl=US">
       <img src="https://user-images.githubusercontent.com/15698032/153604287-91633ac3-971a-418f-8075-26227a964b21.png">
     </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
