--- a/enawra.html
+++ b/enawra.html
@@ -6,7 +6,7 @@
     <a href="https://play.google.com/store/apps/details?id=com.veldteck.enawra&hl=en_US&gl=US">
       <img src="https://user-images.githubusercontent.com/15698032/153604287-91633ac3-971a-418f-8075-26227a964b21.png">
     </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="https://testflight.apple.com/join/mtuFXjTP">
+    <a href="itms-appss://apps.apple.com/us/app/enawra/id1608956149">
       <img src="https://user-images.githubusercontent.com/15698032/153604303-d722f8ea-a888-4ec3-ac0d-ef5d8db76546.png">
     </a>
   </div>
