--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
 </head>
 <body>
   <div class="container">
-    <img src="your-logo.png" alt="Company Logo" class="logo" />
     <h1>We're Building Something Great</h1>
     <p>Our website is currently under construction. Stay tuned for updates!</p>
-    <div class="footer">© 2025 Your Company Name</div>
+    <div class="footer">© 2025 Veldtech LLC</div>
   </div>
 </body>
 </html>
