--- a/index.html
+++ b/index.html
@@ -392,28 +392,8 @@
                     <h3>Memory Map</h3>
                     <p>Share meaningful moments tied to places that matter. A location-based platform for preserving memories and connecting with your community through shared experiences.</p>
                     <div class="product-links">
-                        <a href="[APP_STORE_URL]" target="_blank">App Store</a>
-                        <a href="[PLAY_STORE_URL]" target="_blank">Google Play</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="contact">
-            <h2>Get in Touch</h2>
-            <div class="contact-section">
-                <div class="contact-grid">
-                    <div class="contact-item">
-                        <h3>Email</h3>
-                        <p><a href="mailto:contact@veld-tech.com">contact@veld-tech.com</a></p>
-                    </div>
-                    <div class="contact-item">
-                        <h3>Business</h3>
-                        <p>VeldTech LLC</p>
-                    </div>
-                    <div class="contact-item">
-                        <h3>Website</h3>
-                        <p><a href="https://veld-tech.com">veld-tech.com</a></p>
+                        <a href="https://apps.apple.com/us/app/veldtech-memory-map/id6749919375" target="_blank">App Store</a>
+                        <a href="https://play.google.com/store/apps/details?id=com.veldtech.memorymap&utm_source=na_Med" target="_blank">Google Play</a>
                     </div>
                 </div>
             </div>
