--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Veldtech LLC — About</title>
+  <title>Veldtech LLC</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     :root{
@@ -53,7 +53,9 @@
     h2{font-size:26px;margin-bottom:10px}
     .card{background:rgba(15,18,22,0.7);border:1px solid var(--border);border-radius:var(--radius);padding:18px;margin-bottom:18px;color:var(--muted)}
 
-    footer{padding:30px 0;text-align:center;color:var(--muted);border-top:1px solid var(--border);background:rgba(0,0,0,0.06);position:relative;z-index:1}
+    footer {
+      flex-shrink: 0;
+    }
     a.link{color:var(--accent);text-decoration:none}
   </style>
 </head>
