--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
       <h1>Contact</h1>
       <p class="lead">For partnerships, press, or general inquiries, please email:</p>
       <div class="card">
-        <strong>Email</strong>
+        <!-- <strong>Email</strong> -->
         <!-- <p style="margin:8px 0 0"><a class="link" href="mailto:contact@veld-tech.com">contact@veld-tech.com</a></p> -->
         <a class="btn btn-primary" href="mailto:contact@veld-tech.com">Email Us</a>
       </div>
