--- a/flagship.html
+++ b/flagship.html
@@ -35,7 +35,7 @@
         </ul>
         <div class="actions">
           <a class="btn btn-primary" href="https://maisonly.io" target="_blank" rel="noopener">Visit Maisonly.io</a>
-          <a class="btn btn-secondary" href="index.html">Back to About</a>
+          <!-- <a class="btn btn-secondary" href="index.html">Back to About</a> -->
         </div>
       </div>
     </section>
