--- a/projects.html
+++ b/projects.html
@@ -32,14 +32,14 @@
         <div class="actions">
           <a class="btn btn-primary" href="https://apps.apple.com/us/app/veldtech-memory-map/id6749919375" target="_blank" rel="noopener">Download on iOS</a>
           <a class="btn btn-secondary" href="https://play.google.com/store/apps/details?id=com.veldtech.memorymap&utm_source=na_Med" target="_blank" rel="noopener">Download on Android</a>
-          <a class="btn btn-secondary" href="index.html">Back to About</a>
+          <!-- <a class="btn btn-secondary" href="index.html">Back to About</a> -->
         </div>
       </div>
 
-      <div class="card">
+      <!-- <div class="card">
         <strong>Future Ventures</strong>
         <p>Explorations at the intersection of people, places, and experiences. If you have an idea or want to collaborate, reach out via the contact page.</p>
-      </div>
+      </div> -->
     </section>
   </main>
 
