--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
   <main class="container">
     <section>
       <h1>Contact</h1>
-      <p class="lead">For partnerships, press, or general inquiries, please email:</p>
+      <p class="lead">For partnerships, press, or general inquiries:</p>
       <div class="card">
         <!-- <strong>Email</strong> -->
         <!-- <p style="margin:8px 0 0"><a class="link" href="mailto:contact@veld-tech.com">contact@veld-tech.com</a></p> -->
